<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MuscleRecovery</string>
    <string name="settings">Settings</string>
    <string name="homepage">Visit homepage</string>
    
	<!-- main menu button titles -->
	<string name="normalModePlay">Start normal game</string>
	<string name="expertModePlay">Start expert game</string>
	<string name="trainingsModePlay">Start trainings game</string>
	<string name="stats">Highscore</string>
	
	<!-- settings -->
	<string name="name">Name:</string>
	<string name="surname">Surname:</string>
	<string name="email">Email:</string>
	<string name="username">Username:</string>
	<string name="ssid">SSID:</string>
	<string name="password">Password:</string>
	<string name="confirmPassword">Confirm:</string>
	<string name="key">Key:</string>
	<string name="showKey">Show key</string>
	<string name="save">Save</string>
	<string name="restore">Restore</string>
	<!-- calibration -->
	<string name="calibration">Calibration</string>
	<string name="min">Minimum</string>
	<string name="max">Maximum</string>
	<string name="calibrate">Calibrate</string>
	
	<!-- highscore -->
    <string name="highscore_first_top">Top 10 - normal game</string>
    <string name="highscore_second_top">Top 10 - expert game</string>
    <string name="highscore_your_pos">Your position: </string>

</resources>
